Primeiro, ou segundo de HTML

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -21,10 +21,9 @@ and open the template in the editor.
         <br /> 
         <hr />
         <br /> 
-        <a href="BK.jpg">
-            Abra o BK da loja
-            Beleza
+        <a href="formulario.html">
+            Abra o formulario
         </a>    
-        <img src="imagens/foto.jpg width="60" alt="Java" />
+        <img src="imagens/foto.jpg" width="60" height="60" alt="Java" />
     </body>
 </html>
